working on iteration 4 sorting

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.button-div button {
+  margin: 10px;
 }
 
 .App-logo {
